--- a/ogsde-man.tex
+++ b/ogsde-man.tex
@@ -94,8 +94,8 @@
 \begin{tabbing}
 \hspace*{6cm}\=aa\kill
 \begin{minipage}[t]{0.62\textwidth}
-\noindent This manual has been compiled based on the \ogs Data Explorer 5.2.07 \\
-(released on 15 December 2011).\\
+\noindent This manual has been compiled based on the \ogs Data Explorer 5.3 \\
+(released on 25 April 2012).\\
 \\
 This document as well as its sources are published under Creative Commons Attribution-Noncommercial-Share Alike 3.0 Un\-por\-ted License. For more information go to \url{http://creativecommons.org/licenses/by-nc-sa/3.0/}. \\
 \\
@@ -119,6 +119,8 @@ This document as well as its sources are published under Creative Commons Attrib
 \include{ch03-funcindex}
 
 \include{ch04-visualisation}
+
+%\include{ch05-workflows}
 
 \appendix
 
